kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cargo-tracker-service
  namespace: cargo-tracker
  labels:
    app: cargo-tracker
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: admin
    port: 4848
    targetPort: 4848
    protocol: TCP
  selector:
    app: cargo-tracker
  sessionAffinity: None
